--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -7,6 +7,12 @@
 # Emended by Benjamin des Gachons and Patrick Chew : <http://www.fitima.org/docs/fiche.pdf>
 
 fr:
+  error_unknown: "Erreur."
+  notice_unknown: "Succès."
+  devise:
+    registrations:
+      user:
+        updated: "Mise à jour effectuée avec succès."
   login: "Nom d'utilisateur"
   attributes:
     login: "Nom d'utilisateur"
@@ -221,7 +227,7 @@ fr:
   time:
     am: 'am'
     formats:
-      default: "%d %B %Y %H:%M:%S"
+      default: "%d %B %Y à %H:%M:%S"
       long: "%A %d %B %Y %H:%M"
       short: "%d %b %H:%M"
     pm: 'pm'
